--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-The content of the document......
+  <h1>The content of the document......</h1>
 </body>
 
 <script src="./js/dom.js"></script>
