--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
   <meta name="keywords" content="HTML,CSS,XML,JavaScript">
   <meta name="author" content="John Doe">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./css/reset.css">
-  <link rel="stylesheet" type="text/css" href="./css/style.css">
-  <link rel="stylesheet" type="text/css" href="./css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="public/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="public/css/style.css">
+  <link rel="stylesheet" type="text/css" href="public/css/fonts.css">
   <title>Title of the document</title>
 </head>
 
@@ -16,5 +16,5 @@
   <h1>The content of the document......</h1>
 </body>
 
-<script src="./js/dom.js"></script>
+<script src="public/js/dom.js"></script>
 </html>
