login and register routes

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
 <body>
   <section>
     <h1>log in.</h1>
-    <form>
+    <form action="/login" method="post">
       <label for="username">username</label>
-      <input type="text" name="username" id="username"></input>
+      <input type="text" name="username" id="username" value="njons"></input>
       <label for="password">password</label>
-      <input type="text" name="password" id="password"></input>
+      <input type="text" name="password" id="password" value="apple"></input>
       <button type="submit" id="submit">sign in</button>
     </form>
   </section>
