--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,13 @@
       <input type="text" name="username" id="username" value="njons"></input>
       <label for="password">password</label>
       <input type="text" name="password" id="password" value="apple"></input>
-      <button type="submit" id="submit">sign in</button>
+      <button type="submit" id="submit-login">sign in</button>
     </form>
   </section>
 
   <footer>
     <h2>dont't have a login?</h2>
-    <button type="submit" id="register">register here</button>
+    <button action="/register" type="submit" id="register">register here</button>
   </footer>
 </body>
 
