--- a/public/welcome.html
+++ b/public/welcome.html
@@ -13,7 +13,7 @@
 
 <body>
   <section>
-    <h1>welcome to your page, username.</h1>
+    <h1>welcome to your page, <span id="name"><span>.</h1>
     <h1>don't you just love how it's in your fav colour?</h1>
   </section>
 
