added all routes

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 <body>
   <section>
     <h1>log in.</h1>
-    <form action="/login" method="post">
+    <form action="/verify-login" method="post">
       <label for="username">username</label>
       <input type="text" name="username" id="username" value="njons"></input>
       <label for="password">password</label>
@@ -25,7 +25,7 @@
 
   <footer>
     <h2>dont't have a login?</h2>
-    <button action="/register" type="submit" id="register">register here</button>
+    <a href="/register"><button type="submit" id="register">register here</button></a>
   </footer>
 </body>
 
