--- a/public/welcome.html
+++ b/public/welcome.html
@@ -19,7 +19,7 @@
 
   <footer>
     <h2>wanna leave alredy?</h2>
-    <button id="logout">logout</button>
+    <a href="/"><button id="logout">logout</button></a>
   </footer>
 </body>
 
