--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,6 @@
     <h2>dont't have a login?</h2>
     <a href="/register"><button type="submit" id="register">register here</button></a>
   </footer>
+  <script src="public/js/dom.js"></script>
 </body>
-
-<!-- <script src="public/js/dom.js"></script> -->
 </html>
