--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
     <h1>log in.</h1>
     <form action="/login" method="post">
       <label for="username">username</label>
-      <input type="text" name="username" id="username" value="njons"></input>
+      <input type="text" name="username" id="username" value="njons" autocomplete="off" autofocus required></input>
       <label for="password">password</label>
-      <input type="text" name="password" id="password" value="apple"></input>
+      <input type="text" name="password" id="password" value="apple" autocomplete="off" required></input>
       <button type="submit" id="submit-login">sign in</button>
     </form>
   </section>
