--- a/public/register.html
+++ b/public/register.html
@@ -27,6 +27,6 @@
     <h2>wait. you do have a login?</h2>
     <a href="/login"><button id="register">login here</button></a>
   </footer>
-  <script src="public/js/dom.js"></script>
+  <!-- <script src="public/js/dom.js"></script> -->
 </body>
 </html>
