--- a/public/register.html
+++ b/public/register.html
@@ -14,9 +14,9 @@
     <h1>register.</h1>
     <form action="/save-registry" method="post">
       <label for="username">username</label>
-      <input type="text" name="username" id="username" value="njons"></input>
+      <input type="text" name="username" id="username" value=""></input>
       <label for="password">password</label>
-      <input type="text" name="password" id="password" value="apple"></input>
+      <input type="text" name="password" id="password" value=""></input>
       <label for="color">pick a colour</label>
       <input type="color" id="color" name="color" value="#ff0000">
       <button type="submit" id="submit-register">Join the fun!</button>
@@ -24,7 +24,7 @@
   </section>
 
   <footer>
-    <h2>wait. you do have a login?</h2>
+    <h2>wait.</br> you do have a login?</h2>
     <a href="/login"><button id="register">login here</button></a>
   </footer>
   <!-- <script src="public/js/dom.js"></script> -->
