--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,15 @@
     <h1>log in.</h1>
     <form action="/verify-login" method="post">
       <label for="username">username</label>
-      <input type="text" name="username" id="username" value="njons" autocomplete="off" autofocus required></input>
+      <input type="text" name="username" id="username" value="" autocomplete="off" autofocus required></input>
       <label for="password">password</label>
-      <input type="text" name="password" id="password" value="apple" autocomplete="off" required></input>
+      <input type="text" name="password" id="password" value="" autocomplete="off" required></input>
       <button type="submit" id="submit-login">sign in</button>
     </form>
   </section>
 
   <footer>
-    <h2>dont't have a login?</h2>
+    <h2>don't have a login?</h2>
     <a href="/register"><button type="submit" id="register">register here</button></a>
   </footer>
   <!-- <script src="public/js/dom.js"></script> -->
