--- a/public/register.html
+++ b/public/register.html
@@ -24,7 +24,7 @@
   </section>
 
   <footer>
-    <h2>wait.</br> you do have a login?</h2>
+    <h2>wait.</br> you already have a login?</h2>
     <a href="/login"><button id="register">login here</button></a>
   </footer>
   <!-- <script src="public/js/dom.js"></script> -->
