--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
     <h1>log in.</h1>
     <form action="/verify-login" method="post">
       <label for="username">username</label>
-      <input type="text" name="username" id="username" value="" autocomplete="off" autofocus required></input>
+      <input type="text" name="username" id="username" value="" autocomplete="off" autofocus>
       <label for="password">password</label>
-      <input type="text" name="password" id="password" value="" autocomplete="off" required></input>
+      <input type="text" name="password" id="password" value="" autocomplete="off">
       <button type="submit" id="submit-login">sign in</button>
     </form>
   </section>
@@ -27,6 +27,6 @@
     <h2>don't have a login?</h2>
     <a href="/register"><button type="submit" id="register">register here</button></a>
   </footer>
-  <!-- <script src="public/js/dom.js"></script> -->
+  <script src="public/js/dom_inputs.js"></script>
 </body>
 </html>
