front-end validation

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       <input type="text" name="username" id="username" value="" autocomplete="off" autofocus>
       <label for="password">password</label>
       <input type="text" name="password" id="password" value="" autocomplete="off">
-      <button type="submit" id="submit-login">sign in</button>
+      <button type="submit" id="submit">sign in</button>
     </form>
   </section>
 
