--- a/public/register.html
+++ b/public/register.html
@@ -19,7 +19,7 @@
       <input type="text" name="password" id="password" value="" autocomplete="off">
       <label for="color">pick a colour</label>
       <input type="color" id="color" name="color" value="#ff0000" required>
-      <button type="submit" id="submit-register">Join the fun!</button>
+      <button type="submit" id="submit">Join the fun!</button>
     </form>
   </section>
 
