adds route tests

--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
     <h1>log in.</h1>
     <form action="/verify-login" method="post">
       <label for="username">username</label>
-      <input type="text" name="username" id="username" value="" autocomplete="off" autofocus>
+      <input type="text" name="username" id="username" value="njons" autocomplete="off" autofocus>
       <label for="password">password</label>
-      <input type="text" name="password" id="password" value="" autocomplete="off">
+      <input type="text" name="password" id="password" value="password" autocomplete="off">
       <button type="submit" id="submit">sign in</button>
     </form>
   </section>
