add test for database

--- a/public/register.html
+++ b/public/register.html
@@ -14,9 +14,9 @@
     <h1>register.</h1>
     <form action="/save-registry" method="post">
       <label for="username">username</label>
-      <input type="text" name="username" id="username" value=""  autocomplete="off" autofocus>
+      <input type="text" name="username" id="username" value="njons"  autocomplete="off" autofocus>
       <label for="password">password</label>
-      <input type="text" name="password" id="password" value="" autocomplete="off">
+      <input type="text" name="password" id="password" value="password" autocomplete="off">
       <label for="color">pick a colour</label>
       <input type="color" id="color" name="color" value="#ff0000" required>
       <button type="submit" id="submit">Join the fun!</button>
