--- a/public/register.html
+++ b/public/register.html
@@ -12,11 +12,11 @@
 <body>
   <section>
     <h1>register.</h1>
-    <form action="/save-registry" method="post">
+    <form action="/create-user" method="post">
       <label for="username">username</label>
-      <input type="text" name="username" id="username" value="njons"  autocomplete="off" autofocus>
+      <input type="text" name="username" id="username" value=""  autocomplete="off" autofocus required>
       <label for="password">password</label>
-      <input type="text" name="password" id="password" value="password" autocomplete="off">
+      <input type="text" name="password" id="password" value="" autocomplete="off" required>
       <label for="color">pick a colour</label>
       <input type="color" id="color" name="color" value="#ff0000" required>
       <button type="submit" id="submit">Join the fun!</button>
@@ -25,8 +25,8 @@
 
   <footer>
     <h2>wait.</br> you already have a login?</h2>
-    <a href="/login"><button id="register">login here</button></a>
+    <a href="/"><button id="login">login here</button></a>
   </footer>
-  <script src="public/js/dom_inputs.js"></script>
+  <script src="public/js/dom.mjs"></script>
 </body>
 </html>
