--- a/public/welcome.html
+++ b/public/welcome.html
@@ -19,6 +19,6 @@
     <h2>wanna leave alredy?</h2>
     <a href="/logout"><button id="logout">logout</button></a>
   </footer>
-  <script src="public/js/dom.js"></script>
+  <script src="public/js/dom.mjs"></script>
 </body>
 </html>
