redirect to /welcome loads welcome page, checks for cookie/cookie details and gets user info for welcome page

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
   <body>
     <section>
       <h1>log in.</h1>
-      <form action="/verify-login" method="post">
+      <form method="post">
         <label for="username">username</label>
         <input
           type="text"
           name="username"
           id="username"
-          value="njons"
+          value=""
           autocomplete="off"
           autofocus
           required
@@ -30,7 +30,7 @@
           type="text"
           name="password"
           id="password"
-          value="password"
+          value=""
           autocomplete="off"
           required
         />
