--- a/public/welcome.html
+++ b/public/welcome.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="public/css/reset.css">
   <link rel="stylesheet" type="text/css" href="public/css/style.css">
   <link rel="stylesheet" type="text/css" href="public/css/fonts.css">
-  <title>login. register.</title>
+  <title>login. welcome.</title>
 </head>
 
 <body>
